--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://54.227.113.240:9000/</sonar.host.url>
-		<sonar.login>sonar</sonar.login>
-		<sonar.password>sonar</sonar.password> 
+		<sonar.login>squ_f4c3739d3ee87f5a6c5d7961c96989eab563240e</sonar.login>
+		<!--<sonar.password>sonar</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
