--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 
             <repository>
               <id>nexus</id>
-              <name>Sai Devops Practice Releases Nexus Repository</name>
+              <name>Sai Devops Practice1 Releases Nexus Repository</name>
               <url>http://54.210.246.247:8081/repository/facebook-release/</url>
             </repository>
 
             <snapshotRepository>
               <id>nexus</id>
-              <name>Sai Devops Practice Snapshot Nexus Repository</name>
+              <name>Sai Devops Practice1 Snapshot Nexus Repository</name>
               <url>http://54.210.246.247:8081/repository/facebook-snapshot/</url>
             </snapshotRepository>
 
