--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.84.235.135:9000/</sonar.host.url>
-		<sonar.login>squ_88bed7be72a0da125f70cfcb448286b658f641df</sonar.login>
+		<sonar.host.url>http://3.87.129.239/:9000/</sonar.host.url>
+		<sonar.login>squ_99a1aeb9894578440253e8bb6af8bcc42024a547</sonar.login>
 		<!--<sonar.password>sonar</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
