--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.87.129.239/:9000/</sonar.host.url>
+		<sonar.host.url>http://3.87.129.239:9000/</sonar.host.url>
 		<sonar.login>squ_99a1aeb9894578440253e8bb6af8bcc42024a547</sonar.login>
 		<!--<sonar.password>sonar</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
