--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
             <repository>
               <id>nexus</id>
               <name>Sai Devops Practice1 Releases Nexus Repository</name>
-              <url>http://3.80.46.132/:8081/repository/facebook-releases/</url>
+              <url>http://3.80.46.132:8081/repository/facebook-releases/</url>
             </repository>
 
             <snapshotRepository>
