--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
             <snapshotRepository>
               <id>nexus</id>
               <name>Sai Devops Practice1 Snapshot Nexus Repository</name>
-              <url>http://3.80.46.132/:8081/repository/facebook-snapshot//</url>
+              <url>http://3.80.46.132:8081/repository/facebook-snapshot//</url>
             </snapshotRepository>
 
         </distributionManagement>
